--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@
 .buttons {
     height: 25px;
     padding: 2px 5px;
+    margin-left: 10px;
     background-color: rgba(20,170,245,255);
     border-radius: 5px;
     border: none;
@@ -138,4 +139,9 @@
     text-align: end;
     background-color: white;
     border: 1px solid lightgray ;
+}
+
+.error-message {
+    color: red;
+    margin: auto 10px;
 }
