--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,13 @@
     line-height: 25px;
     text-align: end;
     background-color: white;
-    border: 1px solid lightgray ;
+    border: 2px solid lightgray ;
+}
+
+.container-tags:hover {
+    color:  red;
+    background-color: white;
+    border: 2px solid red ;
 }
 
 .error-message {
